<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/idPass"
        android:layout_width="123dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/passwordTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLogin" />

    <ImageView
        android:id="@+id/idLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mcc_logo" />

    <TextView
        android:id="@+id/idLogin"
        android:layout_width="92dp"
        android:layout_height="56dp"
        android:layout_marginTop="168dp"
        android:gravity="center"
        android:text="@string/loginTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idTextLogin"
        android:layout_width="230dp"
        android:layout_height="59dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:hint="@string/txtLogin"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toEndOf="@+id/idLogin"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idTextPassword"
        android:layout_width="234dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toEndOf="@+id/idPass"
        app:layout_constraintTop_toBottomOf="@+id/idTextLogin" />

    <Button
        android:id="@+id/idLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>