<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainClassList">

    <Spinner
        android:id="@+id/spnCert"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:entries="@array/spnCert"
        app:layout_constraintEnd_toStartOf="@+id/spnAssociates"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swBar" />

    <EditText
        android:id="@+id/idYear"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Year"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idFirstName"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idLastName"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idFirstTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txtFirst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idFirstName" />

    <TextView
        android:id="@+id/idLastTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txtLast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLastName" />

    <TextView
        android:id="@+id/idPhoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/txtPhone"
        app:layout_constraintEnd_toStartOf="@+id/idPhone"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idPhone"
        android:layout_width="224dp"
        android:layout_height="54dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLastName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="62dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:text="@string/txtDOB"
        app:layout_constraintEnd_toStartOf="@+id/spnMonth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPhoneText" />

    <Spinner
        android:id="@+id/spnMonth"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="28dp"
        android:entries="@array/spnMonths"
        app:layout_constraintEnd_toStartOf="@+id/idDay"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idDay"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="Day"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/idYear"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idCert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/txtCert"
        app:layout_constraintEnd_toStartOf="@+id/idAssociates"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/idAssociates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/txtAssociate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idYear" />

    <Switch
        android:id="@+id/swBar"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="300dp"
        android:checked="true"
        android:splitTrack="false"
        android:textOff="@string/txtAssociate"
        android:textOn="@string/txtCert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        tools:checked="true" />

    <Spinner
        android:id="@+id/spnAssociates"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/spnMajor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swBar" />

    <TextView
        android:id="@+id/idCert2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/txtCert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCert" />

    <TextView
        android:id="@+id/idMajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/txtMajor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.691"
        app:layout_constraintStart_toEndOf="@+id/idCert2"
        app:layout_constraintTop_toBottomOf="@+id/spnAssociates" />

    <Button
        android:id="@+id/idBtnNext"
        android:layout_width="99dp"
        android:layout_height="56dp"
        android:layout_marginBottom="52dp"
        android:text="@string/txtNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>